tests/correctness/reject/parse_error.keel
def broken(a, b:
    return a
